test/fail/integration/_fail_sem_expr_funct_call_5.hs
x :: Int -> Int -> Int
x y z = y + z
y :: Int
y = x 3
main = print "hello"